--- a/todo.txt
+++ b/todo.txt
@@ -6,11 +6,10 @@
 - search for stories
 - make sure all package updates work
 - update all helper files and tests
-- integration tests for all stories
 - build breaks! fix this
 - figure out how to run create-index on gatsby server restart
-- add hr tags to posts
-- fix selectable component so it doesn't get so tall on narrow screens
+- css broken on  first load in build?
+
 - meta og:image tags for pages that aren't blog-post pages
 - remove all componentWillMounts
 - fewer decimal places for orchard-game.js
@@ -21,6 +20,10 @@
     - babel-plugin-require-context-hook didn't help
     - need for gatsby-image
   - not mocking StaticQuery correctly, getting super unhelpful error
+  - gatsby-mdx bug
+  - annoying bullshit with different versions of graphql
+  - _.upperFirst is not defined (peer dep version of _ v 3.5.0 for gatsby-transformer-csv, instead of ~4)
+  - css broken on initial page load: gatsby-plugin-styled-components
 
 
 LOW PRIORITY
