--- a/src/pages/articles/precient-precincts.mdx
+++ b/src/pages/articles/precient-precincts.mdx
@@ -12,4 +12,9 @@ import {
 
 hi.
 
-<VotingMap />
+<VotingMap caption="Figure 1: blah" />
+
+Sources:
+
+- [Election Administration and Voting Survey Datasets, Codebooks, and Survey Instruments](https://www.eac.gov/research-and-data/datasets-codebooks-and-surveys/), by the U.S. Election Assistance Commission
+- [Estimates of the Voting Age Population for 2016](https://www.federalregister.gov/documents/2017/01/30/2017-01890/estimates-of-the-voting-age-population-for-2016), by the Federal Register. Other years: [2014](https://www.federalregister.gov/documents/2015/02/06/2015-02473/estimates-of-the-voting-age-population-for-2014), [2012](https://www.federalregister.gov/documents/2013/01/30/2013-02004/estimates-of-the-voting-age-population-for-2012), [2010](https://www.federalregister.gov/documents/2011/06/27/2011-15968/estimates-of-the-voting-age-population-for-2010), [2008](https://www.federalregister.gov/documents/2009/01/27/E9-1687/estimates-of-the-voting-age-population-for-2008).
