--- a/src/pages/articles/precient-precincts.mdx
+++ b/src/pages/articles/precient-precincts.mdx
@@ -7,12 +7,15 @@ featured_image_caption: "Playing a (hopefully fair) board game. Image credit: Br
 ---
 
 import {
+  VotingLineChart,
   VotingMap
 } from "story_components";
 
 hi.
 
 <VotingMap caption="Figure 1: blah" />
+
+<VotingLineChart caption="Figure 2: foo" />
 
 Sources:
 
